@@ -1060,12 +1060,17 @@ itron_initialization_tasks_table ITRON_Initialization_tasks[] = {
     CONFIGURE_INITIALIZATION_THREADS_STACKS_POSIX_PART + \
     CONFIGURE_INITIALIZATION_THREADS_STACKS_ITRON_PART)
 
+/*
+ *  POSIX Threads have a default stack size of 2x minimum.  The code
+ *  below CONFIGURE_MEMORY_FOR_TASKS(...) takes this into account.
+ */
 #define CONFIGURE_EXECUTIVE_RAM_SIZE \
 (( CONFIGURE_MEMORY_FOR_POSIX + \
    CONFIGURE_MEMORY_FOR_ITRON + \
    CONFIGURE_MEMORY_FOR_TASKS(CONFIGURE_MAXIMUM_TASKS + \
       CONFIGURE_MAXIMUM_POSIX_THREADS + CONFIGURE_MAXIMUM_ADA_TASKS + \
       CONFIGURE_MAXIMUM_ITRON_TASKS ) + \
+   (CONFIGURE_MAXIMUM_POSIX_THREADS * RTEMS_MINIMUM_STACK_SIZE ) + \
    CONFIGURE_INITIALIZATION_THREADS_STACKS + \
    CONFIGURE_MEMORY_FOR_TIMERS(CONFIGURE_MAXIMUM_TIMERS) + \
    CONFIGURE_MEMORY_FOR_SEMAPHORES(CONFIGURE_MAXIMUM_SEMAPHORES + \
