@@ -1,3 +1,8 @@
+2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* sapi/include/confdefs.h: POSIX threads use twice the minimum stack
+	size. Account for this.
+
 2007-06-13	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* configure.ac: Add NDEBUG as a command line compilation option.
